[gd_scene load_steps=4 format=3 uid="uid://2j7tkn5rj1h6"]

[ext_resource type="Script" path="res://Prog82a.gd" id="1_vgu66"]

[sub_resource type="LabelSettings" id="LabelSettings_pew8n"]
font_size = 60

[sub_resource type="LabelSettings" id="LabelSettings_64p46"]
font_size = 70

[node name="Prog82a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vgu66")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 768.0
offset_top = 88.0
offset_right = 1152.0
offset_bottom = 192.0

[node name="LineEdit2" type="LineEdit" parent="."]
offset_left = 768.0
offset_top = 216.0
offset_right = 1152.0
offset_bottom = 320.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 80.0
offset_right = 784.0
offset_bottom = 207.0
text = "Enter speed limit:"
label_settings = SubResource("LabelSettings_pew8n")

[node name="Label2" type="Label" parent="."]
offset_left = 32.0
offset_top = 200.0
offset_right = 900.0
offset_bottom = 327.0
text = "Enter vehicle speed:"
label_settings = SubResource("LabelSettings_pew8n")

[node name="Label3" type="Label" parent="."]
offset_left = 160.0
offset_top = 344.0
offset_right = 1028.0
offset_bottom = 471.0
label_settings = SubResource("LabelSettings_64p46")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.042
anchor_top = 0.049
anchor_right = 0.042
anchor_bottom = 0.049
offset_left = -24.384
offset_top = 472.248
offset_right = 271.616
offset_bottom = 568.248
text = "Calculate"

[node name="Button2" type="Button" parent="."]
offset_left = 440.0
offset_top = 504.0
offset_right = 752.0
offset_bottom = 600.0
text = "Clear"

[node name="Button3" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.097
anchor_top = 0.111
anchor_right = 0.097
anchor_bottom = 0.111
offset_left = 736.256
offset_top = 432.072
offset_right = 1024.26
offset_bottom = 528.072
text = "Close"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
